# hawkes

./: .gitignore  AUDIT.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md
.github/: dependabot.yml
.github/workflows/: ci.yml
benches/: online_update.rs
data/: README.md  parameters.json  ridgecrest_2019_m2_5.csv
examples/: audit_ridgecrest.rs  basic_hawkes.rs  custom_kernel.rs  demo.rs  fit_hawkes.rs  multi_scale.rs  power_law.rs
src/: adaptive.rs  baseline.rs  diagnostics.rs  fitting.rs  lib.rs  multivariate.rs  multivariate_fitting.rs
