[package]
name = "hawkes"
version = "0.1.0"
edition = "2024"
description = "A high-performance Hawkes Process library in Rust for self-exciting point processes."
license = "MIT"
repository = "https://github.com/OctopusTakopi/hawkes"
keywords = ["hawkes", "point-process", "finance", "mle", "statistics"]
categories = ["science", "mathematics", "finance"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
argmin = "0.10"
argmin-math = "0.4"
rayon = "1.11"

[dev-dependencies]
serde_json = "1.0"
csv = "1.4"
zip = "8.0"
