[package]
name = "hawkes"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
authors = ["Takopi"]
description = "Validated univariate and multivariate Hawkes processes with marked fitting and diagnostics."
license = "MIT"
repository = "https://github.com/OctopusTakopi/hawkes"
readme = "README.md"
keywords = ["hawkes", "point-process", "finance", "mle", "statistics"]
categories = ["science", "mathematics", "finance"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
argmin = "0.11"
argmin-math = "0.5.1"

[dev-dependencies]
serde_json = "1.0"
csv = "1.4"

[[bench]]
name = "online_update"
harness = false

[lints.rust]
missing_docs = "warn"
unsafe_code = "forbid"
